[package]
name = "secure-runtime"
version = "0.1.0"
edition = "2024"
default-run = "secure-runtime"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
landlock = "0.4"
rlimit = "0.11"
libseccomp = "0.4"
libc = "0.2.188"
